Thu Jan 09 09:18:31 CET 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.4 released.

Fri Jan  3 13:34:01 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_31_Test.cpp:
          Small extension, also add one example using a late specified
          return type

Tue Dec 31 10:17:54 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_32_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 test for unions

Tue Dec 31 10:12:14 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_29_Test.cpp:
          Added another member

Tue Dec 31 07:45:07 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_Adapters.cpp:
          Call gettimeofday on the timer queue instead of calling
          ACE_OS directly, fixes problems when using the hr time. Thanks
          to Erik Sohns <erik dot sohns at web dot de> for reporting
          this and providing a patch

Mon Dec 30 12:31:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_31_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 test

Mon Dec 30 11:18:12 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Define S_ISDIR when not defined

        * tests/Compiler_Features_29_Test.cpp:
        * tests/Compiler_Features_30_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Two new C++11 tests


Wed Dec 25 00:00:00 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Merry Christmas everyone!

Mon Dec 23 10:19:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
        * tests/Compiler_Features_28_Test.cpp:
          Added missing include of cstdint

Fri Dec 20 13:43:13 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
